# wildlint

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  RELEASING.md  RULE_CANDIDATES.md  pyproject.toml  sgconfig.yml
.github/: CONTRIBUTING.md  SECURITY.md  dependabot.yml
.github/workflows/: astgrep_corpus_pr.yml  astgrep_drift_watch.yml  ci.yml  release.yml
ast-grep-rules/: README.md  wl001-go.yml  wl001-javascript.yml  wl001-python.yml  wl001-rust.yml  wl001-typescript.yml  wl002-go.yml  wl002-javascript.yml  wl002-python.yml  wl002-rust.yml  wl002-typescript.yml  wl005-go.yml  wl005-javascript.yml  wl005-python.yml  wl005-rust.yml  wl005-typescript.yml
ast-grep-tests/: wl001-go-test.yml  wl001-javascript-test.yml  wl001-python-test.yml  wl001-rust-test.yml  wl001-typescript-test.yml  wl002-go-test.yml  wl002-javascript-test.yml  wl002-python-test.yml  wl002-rust-test.yml  wl002-typescript-test.yml  wl005-go-test.yml  wl005-javascript-test.yml  wl005-python-test.yml  wl005-rust-test.yml  wl005-typescript-test.yml
ast-grep-tests/__snapshots__/: wl001-go-replace-as-strip-snapshot.yml  wl001-javascript-replace-as-strip-snapshot.yml  wl001-python-replace-as-strip-snapshot.yml  wl001-rust-replace-as-strip-snapshot.yml  wl001-typescript-replace-as-strip-snapshot.yml  wl002-go-split-single-space-snapshot.yml  wl002-javascript-split-single-space-snapshot.yml  wl002-python-split-single-space-snapshot.yml  wl002-rust-split-single-space-snapshot.yml  wl002-typescript-split-single-space-snapshot.yml  wl005-go-not-and-in-or-snapshot.yml  wl005-javascript-not-and-in-or-snapshot.yml  wl005-python-not-and-in-or-snapshot.yml  wl005-rust-not-and-in-or-snapshot.yml  wl005-typescript-not-and-in-or-snapshot.yml
scripts/: astgrep_corpus_baseline.json  astgrep_corpus_diff.py  astgrep_drift_baseline.json  astgrep_drift_watch.py  corpus_baseline.json  corpus_diff.py
src/wildlint/: __init__.py  __main__.py  checkers.py  cli.py  property_templates.py
tests/: test_cli.py  test_property_templates.py  test_wildlint.py
